KqaPro_Parser/template/.antlr/TemplateParser.java
// Generated from /data1/nlx/KqaPro_Parser/template/Template.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, COMPARATIVE=22, SUPERLATIVE=23, 
		OPERATOR=24, STRING_OP=25, QUANTITY_OP=26, DATE_OP=27, YEAR_OP=28, STRING=29, 
		STRING_LITERAL=30, INTEGER=31, DECIMAL=32, DOUBLE=33, INTEGER_POSITIVE=34, 
		DECIMAL_POSITIVE=35, DOUBLE_POSITIVE=36, INTEGER_NEGATIVE=37, DECIMAL_NEGATIVE=38, 
		DOUBLE_NEGATIVE=39, EXPONENT=40, BOQ=41, EOQ=42, WS=43;
	public static final int
		RULE_query = 0, RULE_whatEntityQuery = 1, RULE_howManyEntityQuery = 2, 
		RULE_whatAttributeQuery = 3, RULE_whatRelationQuery = 4, RULE_selectAmongQuery = 5, 
		RULE_selectBetweenQuery = 6, RULE_attributeSatisfyQuery = 7, RULE_attributeVerify = 8, 
		RULE_attributeVerifyUnderQualifier = 9, RULE_whatAttributeQualifierQuery = 10, 
		RULE_whatRelationQualifierQuery = 11, RULE_entity = 12, RULE_entitySet = 13, 
		RULE_entityFilterByRelation = 14, RULE_relationFilter = 15, RULE_relationFilterUnderQualifier = 16, 
		RULE_qualifierFilter = 17, RULE_entityFilterByAttribute = 18, RULE_attributeFilter = 19, 
		RULE_attributeFilterUnderQualifier = 20, RULE_concept = 21, RULE_attribute = 22, 
		RULE_qualifierKey = 23, RULE_value = 24, RULE_qualifierValue = 25, RULE_predicate = 26, 
		RULE_entity_name = 27, RULE_concept_name = 28, RULE_key_name = 29, RULE_relation_name = 30, 
		RULE_value_name = 31, RULE_prefix = 32, RULE_op = 33, RULE_bool = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "whatEntityQuery", "howManyEntityQuery", "whatAttributeQuery", 
			"whatRelationQuery", "selectAmongQuery", "selectBetweenQuery", "attributeSatisfyQuery", 
			"attributeVerify", "attributeVerifyUnderQualifier", "whatAttributeQualifierQuery", 
			"whatRelationQualifierQuery", "entity", "entitySet", "entityFilterByRelation", 
			"relationFilter", "relationFilterUnderQualifier", "qualifierFilter", 
			"entityFilterByAttribute", "attributeFilter", "attributeFilterUnderQualifier", 
			"concept", "attribute", "qualifierKey", "value", "qualifierValue", "predicate", 
			"entity_name", "concept_name", "key_name", "relation_name", "value_name", 
			"prefix", "op", "bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'is'", "'How many'", "'For'", "','", "'what is'", "'What is the relation from'", 
			"'to'", "'Among'", "'which one has the'", "'Which one has the'", "'or'", 
			"'('", "')'", "'is the'", "'the'", "'one'", "'that'", "'whose'", "'his/her'", 
			"'its'", "'and'", null, null, null, "'equal to'", null, "'on'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "COMPARATIVE", 
			"SUPERLATIVE", "OPERATOR", "STRING_OP", "QUANTITY_OP", "DATE_OP", "YEAR_OP", 
			"STRING", "STRING_LITERAL", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", 
			"DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", 
			"DOUBLE_NEGATIVE", "EXPONENT", "BOQ", "EOQ", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Template.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public TerminalNode EOQ() { return getToken(TemplateParser.EOQ, 0); }
		public TerminalNode EOF() { return getToken(TemplateParser.EOF, 0); }
		public WhatEntityQueryContext whatEntityQuery() {
			return getRuleContext(WhatEntityQueryContext.class,0);
		}
		public HowManyEntityQueryContext howManyEntityQuery() {
			return getRuleContext(HowManyEntityQueryContext.class,0);
		}
		public WhatAttributeQueryContext whatAttributeQuery() {
			return getRuleContext(WhatAttributeQueryContext.class,0);
		}
		public WhatRelationQueryContext whatRelationQuery() {
			return getRuleContext(WhatRelationQueryContext.class,0);
		}
		public SelectAmongQueryContext selectAmongQuery() {
			return getRuleContext(SelectAmongQueryContext.class,0);
		}
		public SelectBetweenQueryContext selectBetweenQuery() {
			return getRuleContext(SelectBetweenQueryContext.class,0);
		}
		public AttributeSatisfyQueryContext attributeSatisfyQuery() {
			return getRuleContext(AttributeSatisfyQueryContext.class,0);
		}
		public WhatAttributeQualifierQueryContext whatAttributeQualifierQuery() {
			return getRuleContext(WhatAttributeQualifierQueryContext.class,0);
		}
		public WhatRelationQualifierQueryContext whatRelationQualifierQuery() {
			return getRuleContext(WhatRelationQualifierQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(70);
				whatEntityQuery();
				}
				break;
			case 2:
				{
				setState(71);
				howManyEntityQuery();
				}
				break;
			case 3:
				{
				setState(72);
				whatAttributeQuery();
				}
				break;
			case 4:
				{
				setState(73);
				whatRelationQuery();
				}
				break;
			case 5:
				{
				setState(74);
				selectAmongQuery();
				}
				break;
			case 6:
				{
				setState(75);
				selectBetweenQuery();
				}
				break;
			case 7:
				{
				setState(76);
				attributeSatisfyQuery();
				}
				break;
			case 8:
				{
				setState(77);
				whatAttributeQualifierQuery();
				}
				break;
			case 9:
				{
				setState(78);
				whatRelationQualifierQuery();
				}
				break;
			}
			setState(81);
			match(EOQ);
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatEntityQueryContext extends ParserRuleContext {
		public TerminalNode BOQ() { return getToken(TemplateParser.BOQ, 0); }
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public WhatEntityQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatEntityQuery; }
	}

	public final WhatEntityQueryContext whatEntityQuery() throws RecognitionException {
		WhatEntityQueryContext _localctx = new WhatEntityQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_whatEntityQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(BOQ);
			setState(85);
			match(T__0);
			setState(86);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HowManyEntityQueryContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public HowManyEntityQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_howManyEntityQuery; }
	}

	public final HowManyEntityQueryContext howManyEntityQuery() throws RecognitionException {
		HowManyEntityQueryContext _localctx = new HowManyEntityQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_howManyEntityQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__1);
			setState(89);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatAttributeQueryContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public WhatAttributeQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatAttributeQuery; }
	}

	public final WhatAttributeQueryContext whatAttributeQuery() throws RecognitionException {
		WhatAttributeQueryContext _localctx = new WhatAttributeQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whatAttributeQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__2);
			setState(92);
			entity();
			setState(93);
			match(T__3);
			setState(94);
			match(T__4);
			setState(95);
			prefix();
			setState(96);
			attribute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatRelationQueryContext extends ParserRuleContext {
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public WhatRelationQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatRelationQuery; }
	}

	public final WhatRelationQueryContext whatRelationQuery() throws RecognitionException {
		WhatRelationQueryContext _localctx = new WhatRelationQueryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whatRelationQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__5);
			setState(99);
			entity();
			setState(100);
			match(T__6);
			setState(101);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectAmongQueryContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public SelectAmongQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectAmongQuery; }
	}

	public final SelectAmongQueryContext selectAmongQuery() throws RecognitionException {
		SelectAmongQueryContext _localctx = new SelectAmongQueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectAmongQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__7);
			setState(104);
			entity();
			setState(105);
			match(T__3);
			setState(106);
			match(T__8);
			setState(107);
			op();
			setState(108);
			attribute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectBetweenQueryContext extends ParserRuleContext {
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public SelectBetweenQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectBetweenQuery; }
	}

	public final SelectBetweenQueryContext selectBetweenQuery() throws RecognitionException {
		SelectBetweenQueryContext _localctx = new SelectBetweenQueryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectBetweenQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__9);
			setState(111);
			op();
			setState(112);
			attribute();
			setState(113);
			match(T__3);
			setState(114);
			entity();
			setState(115);
			match(T__10);
			setState(116);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeSatisfyQueryContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public AttributeVerifyUnderQualifierContext attributeVerifyUnderQualifier() {
			return getRuleContext(AttributeVerifyUnderQualifierContext.class,0);
		}
		public AttributeVerifyContext attributeVerify() {
			return getRuleContext(AttributeVerifyContext.class,0);
		}
		public AttributeSatisfyQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeSatisfyQuery; }
	}

	public final AttributeSatisfyQueryContext attributeSatisfyQuery() throws RecognitionException {
		AttributeSatisfyQueryContext _localctx = new AttributeSatisfyQueryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attributeSatisfyQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__2);
			setState(119);
			entity();
			setState(120);
			match(T__3);
			setState(121);
			match(T__0);
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(122);
				attributeVerifyUnderQualifier();
				}
				break;
			case 2:
				{
				setState(123);
				attributeVerify();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeVerifyContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AttributeVerifyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeVerify; }
	}

	public final AttributeVerifyContext attributeVerify() throws RecognitionException {
		AttributeVerifyContext _localctx = new AttributeVerifyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attributeVerify);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			attribute();
			setState(127);
			op();
			setState(128);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeVerifyUnderQualifierContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public QualifierKeyContext qualifierKey() {
			return getRuleContext(QualifierKeyContext.class,0);
		}
		public QualifierValueContext qualifierValue() {
			return getRuleContext(QualifierValueContext.class,0);
		}
		public AttributeVerifyUnderQualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeVerifyUnderQualifier; }
	}

	public final AttributeVerifyUnderQualifierContext attributeVerifyUnderQualifier() throws RecognitionException {
		AttributeVerifyUnderQualifierContext _localctx = new AttributeVerifyUnderQualifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attributeVerifyUnderQualifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			attribute();
			setState(131);
			op();
			setState(132);
			value();
			setState(133);
			match(T__11);
			setState(134);
			qualifierKey();
			setState(135);
			match(T__0);
			setState(136);
			qualifierValue();
			setState(137);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatAttributeQualifierQueryContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode BOQ() { return getToken(TemplateParser.BOQ, 0); }
		public QualifierKeyContext qualifierKey() {
			return getRuleContext(QualifierKeyContext.class,0);
		}
		public WhatAttributeQualifierQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatAttributeQualifierQuery; }
	}

	public final WhatAttributeQualifierQueryContext whatAttributeQualifierQuery() throws RecognitionException {
		WhatAttributeQualifierQueryContext _localctx = new WhatAttributeQualifierQueryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whatAttributeQualifierQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__2);
			setState(140);
			entity();
			setState(141);
			match(T__3);
			setState(142);
			prefix();
			setState(143);
			attribute();
			setState(144);
			match(T__0);
			setState(145);
			value();
			setState(146);
			match(T__3);
			setState(147);
			match(BOQ);
			setState(148);
			match(T__13);
			setState(149);
			qualifierKey();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhatRelationQualifierQueryContext extends ParserRuleContext {
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode BOQ() { return getToken(TemplateParser.BOQ, 0); }
		public QualifierKeyContext qualifierKey() {
			return getRuleContext(QualifierKeyContext.class,0);
		}
		public WhatRelationQualifierQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whatRelationQualifierQuery; }
	}

	public final WhatRelationQualifierQueryContext whatRelationQualifierQuery() throws RecognitionException {
		WhatRelationQualifierQueryContext _localctx = new WhatRelationQualifierQueryContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_whatRelationQualifierQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			entity();
			setState(152);
			predicate();
			setState(153);
			entity();
			setState(154);
			match(T__3);
			setState(155);
			match(BOQ);
			setState(156);
			match(T__13);
			setState(157);
			qualifierKey();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public EntitySetContext entitySet() {
			return getRuleContext(EntitySetContext.class,0);
		}
		public EntityFilterByRelationContext entityFilterByRelation() {
			return getRuleContext(EntityFilterByRelationContext.class,0);
		}
		public EntityFilterByAttributeContext entityFilterByAttribute() {
			return getRuleContext(EntityFilterByAttributeContext.class,0);
		}
		public Entity_nameContext entity_name() {
			return getRuleContext(Entity_nameContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_entity);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				entitySet();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				entityFilterByRelation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(161);
				entityFilterByAttribute();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(162);
				entity_name();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntitySetContext extends ParserRuleContext {
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public List<EntityFilterByRelationContext> entityFilterByRelation() {
			return getRuleContexts(EntityFilterByRelationContext.class);
		}
		public EntityFilterByRelationContext entityFilterByRelation(int i) {
			return getRuleContext(EntityFilterByRelationContext.class,i);
		}
		public List<EntityFilterByAttributeContext> entityFilterByAttribute() {
			return getRuleContexts(EntityFilterByAttributeContext.class);
		}
		public EntityFilterByAttributeContext entityFilterByAttribute(int i) {
			return getRuleContext(EntityFilterByAttributeContext.class,i);
		}
		public List<Entity_nameContext> entity_name() {
			return getRuleContexts(Entity_nameContext.class);
		}
		public Entity_nameContext entity_name(int i) {
			return getRuleContext(Entity_nameContext.class,i);
		}
		public EntitySetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entitySet; }
	}

	public final EntitySetContext entitySet() throws RecognitionException {
		EntitySetContext _localctx = new EntitySetContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_entitySet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(165);
				entityFilterByRelation();
				}
				break;
			case 2:
				{
				setState(166);
				entityFilterByAttribute();
				}
				break;
			case 3:
				{
				setState(167);
				entity_name();
				}
				break;
			}
			setState(170);
			bool();
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(171);
				entityFilterByRelation();
				}
				break;
			case 2:
				{
				setState(172);
				entityFilterByAttribute();
				}
				break;
			case 3:
				{
				setState(173);
				entity_name();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityFilterByRelationContext extends ParserRuleContext {
		public ConceptContext concept() {
			return getRuleContext(ConceptContext.class,0);
		}
		public RelationFilterUnderQualifierContext relationFilterUnderQualifier() {
			return getRuleContext(RelationFilterUnderQualifierContext.class,0);
		}
		public RelationFilterContext relationFilter() {
			return getRuleContext(RelationFilterContext.class,0);
		}
		public EntityFilterByRelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityFilterByRelation; }
	}

	public final EntityFilterByRelationContext entityFilterByRelation() throws RecognitionException {
		EntityFilterByRelationContext _localctx = new EntityFilterByRelationContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_entityFilterByRelation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__14);
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				{
				setState(177);
				concept();
				}
				break;
			case T__15:
				{
				setState(178);
				match(T__15);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(181);
			match(T__16);
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(182);
				relationFilterUnderQualifier();
				}
				break;
			case 2:
				{
				setState(183);
				relationFilter();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationFilterContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public RelationFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationFilter; }
	}
